# getUserName

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: getUserName.cc  getUserName.h
test/: main.cc
